// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress component Should be Large 1`] = `
<progress
  className="progress is-large"
  max={100}
  value={30}
/>
`;

exports[`Progress component Should concat classname in props with Bulma classname 1`] = `
<progress
  className="progress other-class this-is-a-test"
  max={100}
  value={30}
/>
`;

exports[`Progress component Should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "render": [Function],
}
`;

exports[`Progress component Should have notification classname 1`] = `
<progress
  className="progress"
  max={100}
  value={30}
/>
`;

exports[`Progress component Should use inline styles 1`] = `
<progress
  className="progress"
  max={100}
  style={
    Object {
      "width": 250,
    }
  }
  value={30}
/>
`;

exports[`Progress component Should use use color black 1`] = `
<progress
  className="progress is-black"
  max={100}
  value={30}
/>
`;
